<package format="3">
  <name>loam_horizon</name>
  <version>0.0.0</version>

  <description>
    This is an advanced implementation of the following open source project:
    [A-LOAM](https://github.com/HKUST-Aerial-Robotics/A-LOAM).
  </description>

  <maintainer email="dev@livoxtech.com">livox</maintainer>

  <license>BSD</license>

  <author email="dev@livoxtech.com">livox</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rcutils</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>livox_ros_driver2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
